# PatoBots_Trainee

./: .gitignore  README.md  sdkconfig
main/: CMakeLists.txt  main.c  my_platform.c
src/bluetooth/: bt_control.h  my_platform.c
src/hardware/motor/: motor.c  motor.h
src/hardware/sensor/: sensor_distancia.c  sensor_distancia.h
src/robot/: robot_states.h  robot_task.c  robot_task.h
src/tsop/: ir_control.c  ir_control.h
src/utils/: config.h
